# zotefuse

./: .gitignore  Cargo.toml  README.md  flake.nix  views.sql  zoterofs.py
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 7si9pwlnmwinfz9x884xl54z39kmbww3-source  kc8g2bzzkw65lw9idy5k2fn5k8aj5c6j-source
src/: main.rs  symlinkfs.rs  zotero.rs  zoterofs.rs
