[package]
name = "zoterofs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "FUSE filesystem for mounting the Zotero library"
repository = "https://github.com/vladidobro/zoterofs"
readme = "README.md"
exclude = [
  ".envrc",
  "flake.nix",
  "flake.lock",
]

[dependencies]
fuser = "*"
clap = { versioin="*", features=["derive"] }
libc = "*"
sqlite = "*"
