[package]
name = "zoterofs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "FUSE filesystem for mounting the Zotero library"
repository = "https://github.com/vladidobro/zoterofs"
readme = "README.md"
exclude = [
  ".envrc",
  "flake.nix",
  "flake.lock",
]

[dependencies]
fuser = "0.14.0"
clap = { version="4.4.16", features=["derive"] }
libc = ">=0.2"
sqlite = ">=0.30"
